<resources>
    <string name="app_name">What To Watch</string>

    <!-- Navigation Drawer -->
    <string name="nav_header_text">Temp header text</string>
    <string name="nav_home_title">Home</string>
    <string name="nav_discover_title">Discover</string>
    <string name="nav_mylist_title">My list</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="text_choose_genre">Choose genre</string>
    <string name="text_sort_by">Sort by</string>
    <string name="text_most_popular">Most popular</string>
    <string name="text_highest_rated">Highest rated</string>
    <string name="text_release_date">Release date</string>
    <string name="btn_find">Find movies</string>

    <!-- Errors -->
    <string name="generic_network_error">Network error</string>
    <string name="movie_already_added">Already added to watch list</string>
    <string name="no_more_items">You have gone through all movies. Do another search!</string>

    <!-- Swipe view -->
    <string name="add">Add to my list</string>
    <string name="dismiss">Dismiss</string>

    <!-- Details -->
    <string name="overview_title">Overview</string>
    <string name="more_info_title">More info</string>
    <string name="minutes_short">m</string>
    <string name="language_title">Language:</string>
    <string name="budget_title">Budget:</string>
    <string name="not_available">N/A</string>
    <string name="action_add">Add to list</string>
    <string name="added_to_list">Added to  your watch list</string>

    <!-- Home -->
    <string name="now_playing">Now playing</string>
    <string name="most_popular">Most popular</string>
    <string name="upcoming">Upcoming</string>
</resources>
