<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.micste.whattowatch.fragments.DiscoverFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/buttonFind"
        android:layout_marginTop="@dimen/default_top_margin"
        android:layout_marginLeft="@dimen/default_side_margin"
        android:layout_marginRight="@dimen/default_side_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/chooseGenre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_choose_genre" />

        <View
            style="@style/Divider"
            android:layout_marginTop="5dp" />

        <Spinner
            android:id="@+id/spinnerGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/text_sort_by" />

        <View
            style="@style/Divider"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <RadioGroup
            android:id="@+id/sortByRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioMostPopular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                app:buttonTint="@color/colorAccent"
                android:text="@string/text_most_popular" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioHighestRated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorAccent"
                android:text="@string/text_highest_rated" />

            <android.support.v7.widget.AppCompatRadioButton
                android:id="@+id/radioReleaseDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:buttonTint="@color/colorAccent"
                android:text="@string/text_release_date" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/buttonFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:layout_alignParentBottom="true"
        android:text="@string/btn_find"/>

</RelativeLayout>
