<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.micste.whattowatch.DetailsActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="center"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Headline"
            app:contentScrim="?attr/colorPrimary"
            app:statusBarScrim="@color/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/backdropImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY" />

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backdrop_overlay_bg" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp">

            <ImageView
                android:id="@+id/timeIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:tint="@android:color/white"
                android:layout_marginLeft="3dp"
                android:src="@drawable/ic_time"/>

            <TextView
                android:id="@+id/runtimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/timeIcon"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="3dp" />

            <ImageView
                android:id="@+id/releaseDateIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/runtimeText"
                android:layout_marginLeft="8dp"
                android:tint="@android:color/white"
                android:src="@drawable/ic_date" />

            <TextView
                android:id="@+id/releaseDateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/releaseDateIcon"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="3dp" />

            <ImageView
                android:id="@+id/ratingIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/ratingText"
                android:tint="@android:color/holo_orange_light"
                android:src="@drawable/ic_star" />

            <TextView
                android:id="@+id/ratingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp" />

            <TextView
                android:id="@+id/languageTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeIcon"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:text="@string/language_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/languageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeIcon"
                android:paddingTop="10dp"
                android:paddingLeft="5dp"
                android:layout_toRightOf="@id/languageTitle" />

            <TextView
                android:id="@+id/budgetTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/languageTitle"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:text="@string/budget_title"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/budgetText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/languageTitle"
                android:paddingTop="5dp"
                android:paddingLeft="5dp"
                android:layout_toRightOf="@id/budgetTitle" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/budgetTitle"
                android:layout_marginTop="8dp"
                app:cardBackgroundColor="@color/lightBlack">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="16sp"
                        android:paddingTop="5dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="@string/overview_title"/>

                    <TextView
                        android:id="@+id/overviewText"
                        android:layout_width="wrap_content"
                        android:padding="6dp"
                        android:layout_height="wrap_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</android.support.design.widget.CoordinatorLayout>
